# pmgo_espresso

./: .gitignore  404.html  CMakeLists.txt  Makefile  README.md  build.sh  components.json  index.html  index.txt  next.config.js  package.json  trace  tsconfig.json
_next/static/9CcmIE6WUR9OPjeKYaydZ/: _buildManifest.js
_next/static/chunks/: 174-e18114e9b61c6528.js  667-434c79839e44fdc7.js  667-d1ed5a8371999004.js  886-1f4c04e4036f619b.js  886-a64783f00b01a9f0.js  main-aa5a995e6d6fb495.js  main-app-b7fe62ecbf1c3125.js  main-e04cf7a1ce975e24.js  webpack-78783686712ea1e0.js
_next/static/chunks/app/: layout-547bf3521e898d32.js  page-5afc71e9dea4f0c3.js  page-fd226e9dbc5c4fbc.js
_next/static/chunks/pages/: _app-2cf874d1d9874d59.js  _error-4e7e25ec42ba8fc1.js
_next/static/css/: 211bec156c7f6d56.css  28d9be17284081c2.css
app/: format-view.tsx  globals.css  layout.tsx  page.js  page.tsx  pokemon-list-item.tsx  pokemon-list.tsx
cache/webpack/client-development/: 14.pack.gz_  index.pack.gz.old
cache/webpack/server-development/: index.pack.gz.old
components/: custom-format-dialog.tsx  main-tabs-view.tsx  pokemon-li-checkbox.tsx  pokemon-li-expand.tsx  pokemon-li-threshold.tsx  pokemon-list-item.tsx  pokemon-list.tsx  update-popup.tsx
components/ui/: badge.tsx  button.tsx  card.tsx  checkbox.tsx  label.tsx  slider.tsx  tabs.tsx
espresso_logic/: CMakeLists.txt  black_white.c  canonical.c  cofactor.c  cols.c  compl.c  contain.c  copyright.h  cpu_time.c  cubestr.c  cvrin.c  cvrin_stream.cpp  cvrin_stream.hpp  cvrm.c  cvrmisc.c  cvrout.c  dominate.c  equiv.c  espresso.c  espresso.h  essen.c  essentiality.c  exact.c  expand.c  gasp.c  gimpel.c  globals.c  hack.c  indep.c  irred.c  main.c  main.h  map.c  matrix.c  mincov.c  mincov.h  mincov_int.h  opo.c  pair.c  part.c  (+25 more)
espresso_logic/test/: CMakeLists.txt  cvrin_stream_test.cpp
lib/: fetch-data.ts  user-data-context.tsx  user-data.ts
server/: server-reference-manifest.json  webpack-runtime.js
server/app/: page.js  page_client-reference-manifest.js
server/vendor-chunks/: @floating-ui.js  @radix-ui.js  @swc.js  aria-hidden.js  class-variance-authority.js  clsx.js  get-nonce.js  lucide-react.js  react-remove-scroll-bar.js  react-remove-scroll.js  react-style-singleton.js  styled-jsx.js  tailwind-merge.js  tslib.js  use-callback-ref.js  use-sidecar.js
static/chunks/: app-pages-internals.js  webpack.js
static/chunks/app/: layout.js  page.js
static/css/app/: layout.css
static/webpack/: webpack.4e7dad22cd75946a.hot-update.js  webpack.69ca32d5483d5e51.hot-update.js  webpack.f8af67abe94e5a9a.hot-update.js
static/webpack/app/: layout.4e7dad22cd75946a.hot-update.js  layout.69ca32d5483d5e51.hot-update.js  layout.f8af67abe94e5a9a.hot-update.js  page.4e7dad22cd75946a.hot-update.js  page.69ca32d5483d5e51.hot-update.js
types/: pokemon.ts  userData.ts
types/app/: layout.ts  page.ts
